changes.txt
Rebase to OG wallet
revamped Icon set for appearance