@@ -1,5 +1,5 @@
 
-set(CN_PROJECT_NAME "PK Gui")
+set(CN_PROJECT_NAME "PennyPurse")
 set(CN_CURRENCY_DISPLAY_NAME "Pennykoin")
 set(CN_CURRENCY_TICKER "Pk")
 set(CN_VERSION 3.5.0)
