@@ -24,8 +24,13 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
        <property name="text">
-        <string>Address:</string>
+        <string>Public Address:</string>
        </property>
       </widget>
      </item>
@@ -52,27 +57,30 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QPushButton" name="m_showKeyButton">
-       <property name="text">
-        <string>Show private key</string>
+      <widget class="QLabel" name="label_2">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
        </property>
-       <property name="checkable">
-        <bool>true</bool>
+       <property name="text">
+        <string>Private key :</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+      <widget class="QLineEdit" name="m_keyEdit"/>
+     </item>
+     <item>
+      <widget class="QToolButton" name="m_copyKeyButton">
+       <property name="text">
+        <string>...</string>
        </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
+       <property name="icon">
+        <iconset resource="../../resources.qrc">
+         <normaloff>:/icons/copy</normaloff>:/icons/copy</iconset>
        </property>
-      </spacer>
+      </widget>
      </item>
     </layout>
    </item>
@@ -108,20 +116,6 @@
         <property name="topMargin">
          <number>0</number>
         </property>
-        <item>
-         <widget class="QLineEdit" name="m_keyEdit"/>
-        </item>
-        <item>
-         <widget class="QToolButton" name="m_copyKeyButton">
-          <property name="text">
-           <string>...</string>
-          </property>
-          <property name="icon">
-           <iconset resource="../../resources.qrc">
-            <normaloff>:/icons/copy</normaloff>:/icons/copy</iconset>
-          </property>
-         </widget>
-        </item>
        </layout>
       </item>
       <item>
@@ -144,22 +138,8 @@
      </layout>
     </widget>
    </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
   </layout>
  </widget>
-
  <resources>
   <include location="../../resources.qrc"/>
  </resources>
@@ -173,22 +153,6 @@
     <hint type="sourcelabel">
      <x>818</x>
      <y>26</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>422</x>
-     <y>295</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>m_showKeyButton</sender>
-   <signal>clicked()</signal>
-   <receiver>ReceiveFrame</receiver>
-   <slot>showKeyClicked()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>86</x>
-     <y>66</y>
     </hint>
     <hint type="destinationlabel">
      <x>422</x>
